src/fhiclcpp/fhiclcpp/test/testFiles/fail/prolog3_fail.fcl
BEGIN_PROLOG
x: 4
BEGIN_PROLOG
y: 5
END_PROLOG
END_PROLOG
